--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="css/magnific-popup.css">
   <link rel="stylesheet" href="css/style.css">
 
+  <link rel="icon" type="images/png" href="images/svs-logo.png">
+
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Vollkorn:300,400,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
@@ -281,6 +283,7 @@
    </div>
 </div>
 
+<!------------------- GALLERY ------------------->
 <section class="content_section">
   <div class="container">
     <div class="south_view_school_gallery">
@@ -354,7 +357,9 @@
     </div>
   </div>
 </section>
+<!------------------- END OF GALLERY ------------------->
 
+<!------------------- FOOTER ------------------->
 <footer class="main_footer">
   <div class="container">
     <div class="tweets_and_map_footer">
@@ -410,6 +415,7 @@
     </div>
   </div>
 </footer>
+<!------------------- END OF FOOTER ------------------->
 
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/jquery.magnific-popup.min.js"></script>
